# AdventOfCode22

./: Cargo.toml  README.md
.github/workflows/: ci.yml
