[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.0.0"
pico-args = "0.5.0"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0.89"
regex = "1"
lazy_static = "1.4.0"